# sorevid_downloader

./: .gitignore  AUDIT_YTDLP_COOKIE_BILIBILI_DOUYIN.md  CLAUDE.md  CODEX_TIKTOK_INVESTIGATION_RESULT.md  CODEX_TIKTOK_LAYOUT_INVESTIGATION.md  CODEX_TIKTOK_SERIES_VIDEO_INVESTIGATION_RESULT.md  README.md  TIKTOK_SHORT_DRAMA_BROWSER_CAPTURE_PLAN.md  UI_SPECIFICATION.md  UX_UI_Instruction.md  capcut-inspire.md  index.html  package-lock.json  package.json  run-tauri-dev-updated.bat  vite.config.ts
.playwright-mcp/: page-2026-06-27T21-59-13-378Z.yml
artifacts/tiktok-layout-investigation/: bootstrap-status.txt  chrome-js-error.txt
extension/: content.css  copy-assets.mjs  manifest.json  popup.css  popup.html  tsconfig.json
extension/src/: background.ts  content.ts  inject.ts  popup.ts  protocol.ts
public/vector/: vector-preview.html
scripts/: fetch-sidecars-macos.mjs  fetch-sidecars-windows.mjs  tiktok-layout-investigation.mjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns  icon.icns.bak
src-tauri/src/: lib.rs  main.rs
