[package]
name = "bilibili-downloader"
version = "0.1.0"
description = "Desktop downloader powered by yt-dlp"
authors = ["BiliBili Downloader"]
edition = "2021"

[lib]
name = "bilibili_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
interprocess = "2.4.2"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2.4.1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["v4"] }
which = "8"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
